After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 240905 - Can't edit Follow Up flag
Can't edit Follow Up flag
Status: RESOLVED FIXED
Product: evolution
Classification: Applications
Component: Mailer
3.4.x (obsolete)
Other All
: Normal minor
: ---
Assigned To: evolution-mail-maintainers
Evolution QA team
Depends on:
Blocks: 310550
 
 
Reported: 2003-04-07 21:59 UTC by aaron
Modified: 2018-07-23 21:45 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description aaron 2003-04-07 21:59:20 UTC
When you've flagged a message for followup, it doesn't appear to be
possible to open the same dialog again (instead of "follow up..." you get
"Clear Flag" or "Flag Completed". If you can't ever open that dialog again,
then it doesn't make sense to have the "Clear Flag" and "Completed" buttons
in the Flag for Follow Up dialog at all, since all it's for is setting, not
clearing or completing, dialogs.

* Right-click a message and select "Follow Up"
* Note "Complete" and "Clear Flag" buttons in flag creation dialog
* Assign date and flag type to the flag
* Click OK.
* Right-click on the message again-- you can clear or complete the flag
here, but you can't edit the flag.

We should either make the flag dialog re-summonable, or remove the
complete/clear buttons from the dialog.
Comment 1 Jeffrey Stedfast 2003-04-07 22:06:29 UTC
this behaviour was copied from microsoft verbatim. in order to
actually get that dialog again to change values, you need to use the
Actions->Follow Up menu item

leaving open, perhaps we should deviate from microsofts ui. I dunno,
not something for 1.4 tho.
Comment 2 André Klapper 2005-12-27 15:16:05 UTC
still as described by aaron in evo2.5.3.

this is NOT enhancement, it's just very, very confusing.
(hmm... won't quote linus here ;-)
Comment 3 Matthew Barnes 2008-03-11 00:27:07 UTC
Bumping version to a stable release.
Comment 4 Milan Crha 2018-07-23 21:45:54 UTC
The below commit lets users edit the Follow up flag (by using the "Mark for Follow Up... menu option") and when it's called on a single message then it really edits it. The 'Clear' button of the dialog had been moved to the dialog's action area, thus when clicked it closes the dialog and clears follow-up flags information from all selected messages.

Created commit b0d3546a9d in evo master (3.29.90+)