Bug 240905 - Can't edit Follow Up flag

Closes https://bugzilla.gnome.org/show_bug.cgi?id=240905